fix page gap of will pagination

--- a/app/assets/stylesheets/modules/pagination.scss
+++ b/app/assets/stylesheets/modules/pagination.scss
@@ -13,6 +13,13 @@
       color: #fff;
     }
   }
+  > .disabled{
+    > .gap{
+      background-color: transparent;
+      color: #ff8080;
+      border: $pagination-border;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
